--- a/style.css
+++ b/style.css
@@ -88,7 +88,12 @@
         font-size: 1.06066rem;
     }
 
-    
+    body{background: linear-gradient(to bottom, #2765D9 0%, #022C90 50%);}
+
+    .column{
+        background-color: #fff;
+    }
+
     .container{
         padding: 2em 1em;
     }
@@ -113,6 +118,7 @@
         left: 50%;
         transform: translateX(-50%);
         width: 100%;
+        background-color: #fff;
     }
 }
 
