--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@
         font-size: 1.06066rem;
     }
 
-    body{background: linear-gradient(to bottom, #2765D9 0%, #022C90 50%);}
+    body{background: linear-gradient(to bottom, #2765D9 0, #fff 0.1%);}
 
     .column{
         background-color: #fff;
