--- a/css/portal.css
+++ b/css/portal.css
@@ -103,7 +103,7 @@ footer{width: 100%}
 
     footer{
         background-color: #fff;
-        position: fixed;
-        bottom: 0;
+        /* position: fixed;
+        bottom: 0; */
     }
 }
