--- a/css/portal.css
+++ b/css/portal.css
@@ -16,7 +16,7 @@
     --clr-dark-gray:#636363;
 }
 
-header{background: linear-gradient(to right, var(--clr-blue-secondary) 0%, var(--clr-blue-primary) 100% )}
+header{background: linear-gradient(to bottom, var(--clr-blue-secondary) 0%, var(--clr-blue-primary) 100% )}
 
 .grid__section{
     display: grid;
@@ -24,9 +24,10 @@ header{background: linear-gradient(to right, var(--clr-blue-secondary) 0%, var(-
 }
 
 .grid-item{
-    border: 1px solid var(--clr-light-gray);
+    border: 2px solid var(--clr-light-gray);
     border-radius: 16px;
     background-color: #EEEEEE;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, .5);
 }
 
 .row{
@@ -41,6 +42,7 @@ header{background: linear-gradient(to right, var(--clr-blue-secondary) 0%, var(-
     border-radius: 4px;
     border: none;
     color: #fff;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, .5);
 }
 
 .btn:hover{opacity: .7}
