--- a/css/portal.css
+++ b/css/portal.css
@@ -55,7 +55,7 @@ p{
     box-shadow: 0 2px 2px rgba(0, 0, 0, .5);
 }
 
-.btn:hover{opacity: .7}
+.a11y-button:hover{opacity: .7}
 
 .bi-search{
     position: absolute;
@@ -69,6 +69,8 @@ p{
     margin: 1em 0;
 }
 
+input::placeholder{color: var(--clr-dark-gray)}
+
 #input-busca{
     border: 2px solid var(--clr-light-gray);
     border-radius: 16px;
@@ -76,7 +78,12 @@ p{
     width: 100%
 }
 
-input::placeholder{color: var(--clr-dark-gray)}
+#input-busca:focus,
+#input-busca:hover{
+    outline: none;
+    border: 2px solid var(--clr-blue-secondary);
+}
+
 
 .search-box{position: relative}
 
@@ -108,6 +115,10 @@ footer{
 
 @media (min-width: 992px) {
     .ag-logo{width: 3.5vw}
+
+    .user-info{line-height: 1.125rem}
+
+    .user-msg{font-size: .9rem}
 
     .search-box,
     .grid-title{
