--- a/css/portal.css
+++ b/css/portal.css
@@ -16,6 +16,11 @@
     --clr-dark-gray:#636363;
 }
 
+header{
+    background: linear-gradient(to bottom, var(--clr-blue-secondary) 0%, 
+        var(--clr-blue-primary) 100%);
+}
+
 p{
     margin-bottom: 0;
 }
