--- a/css/portal.css
+++ b/css/portal.css
@@ -19,7 +19,8 @@
 header{
     /* background: linear-gradient(to bottom, var(--clr-blue-secondary) 0%, 
         var(--clr-blue-primary) 100%); */
-    background-color: var(--clr-blue-primary);
+    background-color: linear-gradient(to bottom, var(--clr-blue-secondary) 0%, 
+    var(--clr-blue-primary) 100%);
 }
 
 p{
