--- a/css/portal.css
+++ b/css/portal.css
@@ -17,15 +17,10 @@
 }
 
 header{
-    /* background: linear-gradient(to bottom, var(--clr-blue-secondary) 0%, 
-        var(--clr-blue-primary) 100%); */
-    background-color: linear-gradient(to bottom, var(--clr-blue-secondary) 0%, 
-    var(--clr-blue-primary) 100%);
+    background-color: #022C90;
 }
 
-p{
-    margin-bottom: 0;
-}
+p{margin-bottom: 0}
 
 .column{
     display: flex;
@@ -33,7 +28,7 @@ p{
 }
 
 .ag-logo,
-.footer-logo{width: 13vw}
+.footer-logo{width: 13%}
 
 .nav-link{
     color: #fff;
@@ -49,12 +44,16 @@ p{
     font-size: .8rem;
 }
 
+.gov-logo--container{width: 50%}
+
+.gov-logo{width: 75%}
+
 .a11y-button{
-    background-color: var(--clr-yellow);
-    padding: .3em .6em;
-    border-radius: 4px;
-    border: none;
     color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: .3em .6em;
+    background-color: var(--clr-yellow);
     box-shadow: 0 2px 2px rgba(0, 0, 0, .5);
 }
 
@@ -123,13 +122,12 @@ footer{
     bottom: 7.5%;
 }
 
-@media (min-width: 600px) {
-    .ag-logo,
-    .footer-logo{width: 7vw}
-}
-
 @media (min-width: 992px) {
-    .ag-logo{width: 4vw}
+    .ag-logo{width: 6vw}
+
+    .gov-logo--container{width: 50%}
+
+    .gov-logo{width: 40%}
 
     .search-box,
     .grid-title{
@@ -151,5 +149,15 @@ footer{
         transform: translateX(-50%);
     }
 
-    .footer-logo{width: 2.5vw}
+    .footer-logo{max-width: 4vw}
+}
+
+@media (min-width: 1200px){
+    .ag-logo{width: 5vw}
+
+    .footer-logo{width: 3.5vw}
+
+    .gov-logo--container{width: 50%}
+    
+    .gov-logo{width: 30%}
 }
