--- a/css/portal.css
+++ b/css/portal.css
@@ -60,8 +60,8 @@ p{margin-bottom: 0}
 
 .bi-search{
     position: absolute;
-    top: 50%;
-    right: 6%;
+    top: 55%;
+    right: 4%;
     transform: translateY(-50%);
     color: var(--clr-dark-gray);
 }
@@ -134,7 +134,11 @@ footer{
         margin: 0;
     }
 
-    #input-busca{padding: .5em 1em}
+    #input-busca{
+        padding: .5em 1em;
+        /* width: 50%;
+        float: right; */
+    }
 
     .grid__section{
         display: grid;
@@ -152,7 +156,7 @@ footer{
 }
 
 @media (min-width: 1200px){
-    .ag-logo{width: 5vw}
+    .ag-logo{width: 4vw}
     .gov-logo--container{width: 50%}
     .gov-logo{width: 30%}
     .footer-logo{width: 3.5vw}
