--- a/css/portal.css
+++ b/css/portal.css
@@ -118,7 +118,7 @@ footer{
 .a11y-modal{
     position: fixed;
     right: 0;
-    bottom: 7.5%;
+    top: 50%;
 }
 
 @media (min-width: 992px) {
@@ -136,8 +136,6 @@ footer{
 
     #input-busca{
         padding: .5em 1em;
-        /* width: 50%;
-        float: right; */
     }
 
     .grid__section{
