--- a/css/portal.css
+++ b/css/portal.css
@@ -16,10 +16,7 @@
     --clr-dark-gray:#636363;
 }
 
-header{
-    background-color: #022C90;
-}
-
+header{background-color: #022C90}
 p{margin-bottom: 0}
 
 .column{
@@ -30,17 +27,14 @@ p{margin-bottom: 0}
 .ag-logo{width: 15%}
 .footer-logo{width: 20%}
 
-.description,
-.footer-text,
-.user-text p+p{
+.description, .footer-text, .user-text p+p{
     color: var(--clr-dark-gray);
     font-size: .9rem;
 }
 
 .gov-logo--container{width: 50%}
 .gov-logo{width: 75%}
-
-.user-text{line-height: 1rem;}
+.user-text{line-height: 1rem}
 
 .bi-person-fill{
     color: #fff;
@@ -49,21 +43,20 @@ p{margin-bottom: 0}
     border-radius: 50%;
 }
 
-.a11y-button,
-.filter-btn{
+.a11y-button, .filter-btn{
     color: #fff;
     border: none;
     border-radius: 4px;
-    padding: .3em .6em;
+    padding: .2em .6em;
     background-color: var(--clr-yellow);
     box-shadow: 0 2px 2px rgba(0, 0, 0, .5);
 }
 
 .filter-btn{
-    background-color: var(--clr-blue-primary);}
+    background-color: var(--clr-blue-primary);
+}
 
-.a11y-button:hover,
-.filter-btn:hover{opacity: .8}
+.a11y-button:hover, .filter-btn:hover{opacity: .8}
 
 .bi-search{
     position: absolute;
@@ -77,6 +70,16 @@ p{margin-bottom: 0}
 
 input::placeholder{color: var(--clr-dark-gray)}
 
+#input-tributos{
+    border: 2px solid var(--clr-light-gray);
+    border-radius: 4px;
+    padding: .75em 1em;
+}
+
+#input-tributos option{
+    color: #636363;
+}
+
 #input-busca{
     border: 2px solid var(--clr-light-gray);
     border-radius: 16px;
@@ -84,8 +87,7 @@ input::placeholder{color: var(--clr-dark-gray)}
     width: 100%
 }
 
-#input-busca:focus,
-#input-busca:hover{
+#input-busca:focus, #input-busca:hover{
     outline: none;
     border: 2px solid var(--clr-blue-primary);
 }
@@ -135,8 +137,7 @@ footer{
 
     .gov-logo{width: 40%}
 
-    .search-box,
-    .grid-title{
+    .search-box, .grid-title{
         width: 50%;
         margin: 0;
     }
