--- a/css/portal.css
+++ b/css/portal.css
@@ -39,15 +39,20 @@ p{margin-bottom: 0}
 .bi-person-fill{
     color: #fff;
     background-color: var(--clr-blue-primary);
-    padding: .2em .4em;
+    padding: .25em .5em;
     border-radius: 50%;
+}
+
+.bi-person-fill:hover{
+    opacity: .8;
+    cursor: pointer;
 }
 
 .a11y-button, .filter-btn{
     color: #fff;
     border: none;
     border-radius: 4px;
-    padding: .2em .6em;
+    padding: .3em .6em;
     background-color: var(--clr-yellow);
     box-shadow: 0 2px 2px rgba(0, 0, 0, .5);
 }
@@ -87,7 +92,7 @@ input::placeholder{color: var(--clr-dark-gray)}
     width: 100%
 }
 
-#input-busca:focus, #input-busca:hover{
+#input-busca:focus, #input-busca:hover, #input-tributos:focus, #input-tributos:hover{
     outline: none;
     border: 2px solid var(--clr-blue-primary);
 }
