--- a/css/dam.css
+++ b/css/dam.css
@@ -1,11 +1,63 @@
 .tributos__section{
-    height: 300px;
+    height: 350px;
     border: 1px solid #DCDCDC;
     border-radius: 8px;
 }
 
 .tributos-footer p, span{
     font-size: .8rem;
+}
+
+.sidebar{
+    position: absolute;
+    top: 0;
+    transform: translateX(-100%);
+
+    background-color: var(--clr-blue-primary);
+    z-index: 1;
+    height: 100%;
+    transition: 1s;
+}
+
+.show-sidebar{
+    transform: translateX(0);
+}
+
+.curtain{
+    position: absolute;
+    transform: translateX(-100%);
+
+    background-color: rgba(0, 0, 0, .45);
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.show-curtain{
+    transform: translateX(0);
+}
+
+.bi-x-lg{
+    color: #fff;
+}
+
+.close-btn{
+    background-color: transparent;
+    border: none;
+}
+
+.aside-title, .list-title{
+    color: var(--clr-yellow);
+}
+
+.aside-list{
+    color: #fff;
+    list-style: none;
+    padding: 0;
+}
+
+.aside-list li{
+    margin-top: .5em;
 }
 
 @media (min-width: 992px) {
