--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
     margin: 0;
     padding: 0;
     font-family: "Rubik", sans-serif;
-    font-size: 1.125rem;
 }
 
 :root{
@@ -16,9 +15,29 @@
     --clr-dark-gray:#636363;
 }
 
-.section__head{background-color: var(--clr-blue-primary)}
+body{
+    font-size: 1rem;
+}
 
 .row{display: flex}
+
+.section__head{background-color: var(--clr-blue-primary)}
+
+.zzz{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.section__head a{
+    color: #fff;
+    text-decoration: none;
+}
+
+.return-btn{
+    display: flex;
+    align-items: center;
+}
 
 .gov-logo--container{
     width: 50%;
@@ -30,18 +49,17 @@
 .gov-logo{width: 75%}
 
 .forms-title{
-    font-size: 1.5rem;
     font-weight: 400;
     text-align: center;
 }
 
-.forms-main{margin-top: .5em}
+.forms-main{margin-top: .75em}
 
-.forms-main form{padding: .5em 0}
+.forms-main form{padding: .75em 0}
 
 .forms-main form input{
     width: 100%;
-    padding: 1em;
+    padding: 1.125em;
     border-radius: 16px;
     border: 2px solid var(--clr-light-gray);
 }
@@ -56,8 +74,8 @@
 
 .section-btn{
     flex-direction: column;
-    padding: 1.5em 0;
-    gap: .75em;
+    padding: 1.25em 0;
+    gap: .5em;
 }
 
 .btn{
@@ -69,7 +87,7 @@
     text-align: center;
 }
 
-.btn:hover{opacity: .7}
+.btn:hover, .return-btn:hover{opacity: .7}
 
 .certificado{
     justify-content: center;
@@ -91,21 +109,25 @@
 }
 
 @media (max-width:991px) {
-    *{font-size: 1.06066rem}
-
     .container{padding: 1em}
-
     .d-none{display: none}
-
-    .section__head,
-    .forms-main p{text-align: center}
+    .ag-logo{width: 20%}
+    .section__head, .forms-main p{text-align: center}
 
     .section__head{
         border-bottom-left-radius: 45%;
         border-bottom-right-radius: 45%;
     }
 
-    .ag-logo{width: 20%}
+    .section__head a{
+        position: fixed;
+        top: 1%;
+        left: 2%;        
+    }
+
+    .return-img{
+        width: 20px;
+    }
 
     .section-footer p{
         position: fixed;
@@ -119,8 +141,19 @@
 
 @media (min-width:992px){
     .wrapper{min-height: 100dvh}
-
     .column{display: flex;}
+    .ag-logo{width: 10%}
+    .footer-logo{width: 6vw}
+
+    .position{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        padding: 0 2em;
+        width: 100%;
+    }
 
     .section__head{
         width: 50%;
@@ -135,35 +168,19 @@
         font-size: 1.5rem;
     }
 
-    .ag-logo{width: 10%}
-
     .section__main{
         position: relative;
         width: 50%;
     }
 
-    .position{
-        padding: 0 2em;
-        width: 100%;
-
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
-
     .section-footer{
         text-align: center;
-        margin-top: .5em;
+        margin-top: 1em;
     }
-
-    .footer-logo{width: 5vw}
 }
 
-@media (min-width:1200px) {
-    *{font-size: 1.25rem} 
-
+@media (min-width:1400px) {
+    body{font-size: 1.25rem} 
     .section__head{width: 65%}
-
     .section__main{width: 45%}
 }
