--- a/css/dam.css
+++ b/css/dam.css
@@ -60,6 +60,13 @@
     margin-top: .5em;
 }
 
+footer{
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 @media (min-width: 992px) {
     .tributos__section{
         height: 600px;
