--- a/css/portal.css
+++ b/css/portal.css
@@ -79,7 +79,7 @@ p{margin-bottom: 0}
     cursor: pointer;
 }
 
-.a11y-button, .filter-btn{
+.a11y-button, .filter-btn, .pay-btn{
     color: var(--clr-white);
     border: none;
     border-radius: 4px;
@@ -88,11 +88,11 @@ p{margin-bottom: 0}
     box-shadow: 0 2px 2px rgba(0, 0, 0, .5);
 }
 
-.filter-btn{
+.filter-btn, .pay-btn{
     background-color: var(--clr-blue-primary);
 }
 
-.a11y-button:hover, .filter-btn:hover{opacity: .8}
+.a11y-button:hover, .filter-btn:hover, .pay-btn:hover{opacity: .8}
 
 .bi-search{
     position: absolute;
@@ -152,7 +152,6 @@ p{margin-bottom: 0}
 }
 
 footer{
-    background-color: #fff;
     width: 100%;
 }
 
