--- a/css/dam.css
+++ b/css/dam.css
@@ -70,6 +70,7 @@
 
 .tributos-title{
     padding: .5em;
+    border-bottom: 2px solid white;
 }
 
 .tributos__section p{
@@ -83,7 +84,6 @@ footer{
 
 @media (min-width: 992px) and (min-height: 600px){
     .tributos__section{
-        height: 450px;
         grid-template-columns: 2fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
         overflow-y: hidden;
         overflow-x: hidden;
@@ -94,7 +94,7 @@ footer{
     }
 }
 
-@media (min-width: 1200px) and (min-height: 888px){
+@media (min-width: 1200px) or (min-height: 888px){
     .tributos__section{
         height: 700px;
     }
