--- a/css/dam.css
+++ b/css/dam.css
@@ -89,6 +89,10 @@ footer{
         overflow-x: hidden;
     }
 
+    .tributos__section div + div{
+        border-left: 1px solid var(--clr-light-gray);
+    }
+
     .tributos-footer p, span{
         font-size: 1rem;
     }
